Fix grid displaying no companies, aligned footer in company card

--- a/resources/styles/blocks/_trade-fair-companies-grid.scss
+++ b/resources/styles/blocks/_trade-fair-companies-grid.scss
@@ -1,5 +1,6 @@
 .tf-companies-grid{
   display: grid;
+  justify-items: stretch;
 }
 
 @for $i from 1 through 4 {
